testsuites/LLT/compiler/Diagnose/lex_test/lex_expected_right_bracket_or_hexadecimal/case17.expect.out
error: expected '}' or hexadecimal digit in unicode escape, found ' '
  ==> case17.cj:16:7:
   | 
16 | \u{123 cangjie2 ${ "\u{1232"
   | ~~    ^ expected '}' or hexadecimal digit
   | |
   | because it is in this Unicode escape
   | 
   # note: unicode escape may only contain hexadecimal digits

1 error generated, 1 error printed.
